<resources>
    <string name="app_name">Personas material</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="agregarpersona">Crear</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>

    <string name="msjguardado">Persona Agregada</string>
    <string name="cedula">Cedula</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>

    <string-array name="opc_sexo">
        <item>@string/hombre</item>
        <item>@string/mujer</item>
    </string-array>
</resources>
